k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudpipeline
  labels:
    name: cloudpipeline
    environment: production
